codigo 11_4
Python 3.8.2 (tags/v3.8.2:7b3ab59, Feb 25 2020, 22:45:29) [MSC v.1916 32 bit (Intel)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> def quicksort(lista):
		quicksort_aux(lista,0,len(lista)-1)
... ... 
>>> def quicksort_aux(lista,inicio, fin):
		if inicio < fin:
			pivote = particion(lista,inicio,fin)
			quicksort_aux(lista, inicio, pivote-1)
			quicksort_aux(lista, pivote+1, fin)
... ... ... ... ... 
>>> def particion(lista, inicio, fin):
		#Se asigna como pivote en numero de la primera localidad
		pivote = lista[inicio]
		print("Valor del pivote {}".format(pivote))
		#Se crean dos marcadores
		izquierda = inicio+1
		derecha = fin
		print("Indice izquierdo {}".format(izquierda))
		print("Indice derecho {}".format(derecha))

		bandera = False
		while not bandera:
			while izquierda <= derecha and lista(izquierda) <= pivote:
				izquierda = izquierda + 1
			while lista[derecha] >= pivote and derecha >= izquierda:
				derecha = derecha -1
			if derecha < izquierda:
				bandera= True
			else:
				temp=lista[izquierda]
				lista[izquierda]=lista[derecha]
				lista[derecha]=temp
		
		print(lista)

		
		temp=lista[inicio]
		lista[inicio]=lista[derecha]
		lista[derecha]=temp
		return derecha
	
... ... ... ... ... ... ... ... ... >>>   File "<stdin>", line 1
    bandera = False
    ^
IndentationError: unexpected indent
>>>   File "<stdin>", line 1
    while not bandera:
    ^
IndentationError: unexpected indent
>>>   File "<stdin>", line 1
    while izquierda <= derecha and lista(izquierda) <= pivote:
    ^
IndentationError: unexpected indent
>>>   File "<stdin>", line 1
    izquierda = izquierda + 1
    ^
IndentationError: unexpected indent
>>>   File "<stdin>", line 1
    while lista[derecha] >= pivote and derecha >= izquierda:
    ^
IndentationError: unexpected indent
>>>   File "<stdin>", line 1
    derecha = derecha -1
    ^
IndentationError: unexpected indent
>>>   File "<stdin>", line 1
    if derecha < izquierda:
    ^
IndentationError: unexpected indent
>>>   File "<stdin>", line 1
    bandera= True
    ^
IndentationError: unexpected indent
>>>   File "<stdin>", line 1
    else:
    ^
IndentationError: unexpected indent
>>>   File "<stdin>", line 1
    temp=lista[izquierda]
    ^
IndentationError: unexpected indent
>>>   File "<stdin>", line 1
    lista[izquierda]=lista[derecha]
    ^
IndentationError: unexpected indent
>>>   File "<stdin>", line 1
    lista[derecha]=temp
    ^
IndentationError: unexpected indent
>>> >>>   File "<stdin>", line 1
    print(lista)
    ^
IndentationError: unexpected indent
>>> >>> >>>   File "<stdin>", line 1
    temp=lista[inicio]
    ^
IndentationError: unexpected indent
>>>   File "<stdin>", line 1
    lista[inicio]=lista[derecha]
    ^
IndentationError: unexpected indent
>>>   File "<stdin>", line 1
    lista[derecha]=temp
    ^
IndentationError: unexpected indent
>>>   File "<stdin>", line 1
    return derecha
    ^
IndentationError: unexpected indent
>>> >>> lista = [21, 10, 0, 11, 9, 24, 20, 14, 1]
>>> print("lista desordenada {}".format(lista))
lista desordenada [21, 10, 0, 11, 9, 24, 20, 14, 1]
>>> quicksort(lista)
Valor del pivote 21
Indice izquierdo 1
Indice derecho 8
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "<stdin>", line 2, in quicksort
  File "<stdin>", line 4, in quicksort_aux
TypeError: unsupported operand type(s) for -: 'NoneType' and 'int'
>>> print("lista ordenada {}".format(lista))
lista ordenada [21, 10, 0, 11, 9, 24, 20, 14, 1]
>>> 
>>> #Importando bibliotecas
>>> %pylab inline
  File "<stdin>", line 1
    %pylab inline
    ^
SyntaxError: invalid syntax
>>> import matplotlib.pyplot as plt 
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ModuleNotFoundError: No module named 'matplotlib'
>>> 